samples/_failures_safe/1761256393_41ccdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8da49989.c: In function ‘main’:
./samples/SAFE/__tmp_8da49989.c:138:17: error: expected expression at end of input
  138 |                 if (matrix_add(&mat1, &mat2, &
      |                 ^~
./samples/SAFE/__tmp_8da49989.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8da49989.c:138:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8da49989.c:138:17: error: expected declaration or statement at end of input
